Bug 1684688 - Fix alpha support in nsAVIFDecoder. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D102852