gfx/ycbcr/yuv_convert.h
@@ -118,13 +118,6 @@ void ConvertI420AlphaToARGB32(const uint8* yplane,
                               int uvstride,
                               int argbstride);
 
-void ARGBAttenuate(const uint8_t* src_argb,
-                   int src_stride_argb,
-                   uint8_t* dst_argb,
-                   int dst_stride_argb,
-                   int width,
-                   int height);
-
 } // namespace gfx
 } // namespace mozilla
 
