image/test/gtest/Common.cpp
@@ -440,6 +440,105 @@ ImageTestCase GreenAVIFTestCase() {
 
 // Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
 // See bug 1634741
+ImageTestCase Transparent10bit420AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-10bit-yuv420.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent10bit422AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-10bit-yuv422.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent10bit444AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-10bit-yuv444.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent12bit420AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-12bit-yuv420.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent12bit422AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-12bit-yuv422.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent12bit444AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-12bit-yuv444.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent8bit420AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-8bit-yuv420.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent8bit422AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-8bit-yuv422.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
+ImageTestCase Transparent8bit444AVIFTestCase() {
+  auto testCase =
+      ImageTestCase("transparent-green-50pct-8bit-yuv444.avif", "image/avif",
+                    IntSize(100, 100), TEST_CASE_IS_TRANSPARENT)
+          .WithSurfaceFlags(SurfaceFlags::TO_SRGB_COLORSPACE);
+  testCase.mColor = BGRAColor(0x00, 0xFF, 0x00, 0x80);
+  return testCase;
+}
+
+// Forcing sRGB is required until nsAVIFDecoder supports ICC profiles
+// See bug 1634741
 ImageTestCase StackCheckAVIFTestCase() {
   return ImageTestCase("stackcheck.avif", "image/avif", IntSize(4096, 2924),
                        TEST_CASE_IGNORE_OUTPUT)
